fix sixing and spacing and add readme info about best screen size

--- a/src/App.css
+++ b/src/App.css
@@ -85,14 +85,6 @@
   margin: 1.5em;
 }
 
-#side-sheet {
-  background-color: #e1e3eb;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-
 .side-poster-container {
   width: 100%;
   height: 100%;
@@ -100,12 +92,11 @@
   align-items: center;
   justify-content: center;
   position: absolute;
-  background-color:#e1e3eb;
 }
 
 .side-poster {
-  width: 70%;
-  margin: 0.5em;
+  width: 62%;
+  margin: 1em;
   border-radius: 30px;
   box-shadow: 0px 0px 8px 5px rgba(184,182,184,1);
 }
@@ -118,7 +109,7 @@
   justify-content: center;
   position: absolute;
   width: 85%;
-  height: 100%;
+  height: 60%;
   border-radius: 30px;
   box-shadow: 0px 10px 8px 5px rgba(199,199,199,1);
   margin-top: 30em;
@@ -126,8 +117,12 @@
 }
 
 .add-button {
-  margin-top: -30em;
+  margin-top: -16em;
   margin-bottom: 0.5em;
+  /* border: solid;
+  border-color: green;
+  border-width: 1px;
+  border-radius: 5px */
 }
 
 .errorMessage {
